--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,21 +1,22 @@
 body{
-    color: #fff;
+    color: #2b2b2b;;
     font-family: 'Nunito Semibold';
-    text-align: center;
+    text-align: left;
     background: #3bbced;
+    background: #f5f5f5;
 }
 
 #content{
     display: grid;
-    grid-template-columns: repeat(1, 280px);
+    grid-template-columns: repeat(1, 300px);
     grid-auto-rows: minmax(280px, auto);
     grid-gap: 20px;
     margin: 50px auto;
     justify-content: center;
 }
 #content div{
-    background: #333;
-    padding: 10px;
+    background: #e9e9e9;
+    padding: 50px;
 }
 .grow-box {
     grid-column: span 1;
@@ -25,6 +26,23 @@ body{
     grid-column: 1fr;
     grid-row: 1fr;
 }
+
+h2 { 
+    font-size:24px; 
+    font-weight:300; 
+    line-height: 31px;
+}
+
+p.small { 
+    font-size:11px !important; 
+    text-transform:uppercase; 
+    font-weight:700; 
+    font-family:'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif; 
+    color:#2b2b2b; 
+    padding:0 0 22px 0; 
+    letter-spacing:2px; 
+}
+
 @media screen and (min-width: 768px) {
     #content{
         grid-template-columns: repeat(2, 280px);
@@ -32,6 +50,13 @@ body{
     .grow-box {
         grid-column: span 2;
         grid-row: span 2;
+    }
+    h2 { 
+        font-size: 48px;
+        font-weight:400; 
+        line-height:60px; 
+        letter-spacing:0px; 
+        line-height: 60px;
     }
 }
 @media screen and (min-width: 992px) {
@@ -44,3 +69,4 @@ body{
         grid-template-columns: repeat(4, 280px);
     }
 }
+
